# s2

./: .gitignore  pyproject.toml
data/20210516-s2-open-research-corpus/: README.md
notebooks/: 20210516-s2-filter.ipynb  20210520-publication_trends.ipynb
